# bang_sec

./: .gitignore
command-deck/: .env.example  MAP_INTEGRATION.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
command-deck/docs/: voice-agent-integration-notes.md
command-deck/src/: App.tsx  main.tsx  styles.css
command-deck/src/components/: ActivityStream.tsx  AgentRail.tsx  ConversationBar.tsx  DeckMapSurface.tsx  DeckMapSurfaceStack.tsx  IntelPanel.tsx  LayerControls.tsx  MapModeSwitcher.tsx  MapSurfaceSwitcher.tsx  PanelTitle.tsx  ScoreStrip.tsx  TacticalMap.tsx  TopBar.tsx
command-deck/src/components/primitives/: Badge.tsx
command-deck/src/css/: components.css  index.css  utilities.css
command-deck/src/data/: locationContextReport.ts  mockMission.ts
command-deck/src/domain/: types.ts
command-deck/src/hooks/: useCommandDeck.ts
command-deck/src/map/: buildDeckLayers.ts  mapConfig.ts  mapSurfaces.ts
command-deck/src/services/: geocoding.ts  ghostlineVoiceAdapter.ts  palantirAdapter.ts  voiceDeckProtocol.ts
pipecat-dummy-agent/: .dockerignore  Dockerfile  README.md  bot.py  pcc-deploy.toml  pyproject.toml
